VSE crash while moving a strip #55895

Closed
opened 2018-07-10 17:08:23 +02:00 by Paolo Cabaleiro · 7 comments

System Information
OS Name Microsoft Windows 10 Home Single Language
Version 10.0.16299 Build 16299
System Manufacturer ASUSTeK COMPUTER INC.
System Model GL752VW
System Type x64-based PC
System SKU ASUS-NotebookSKU
Processor Intel(R) Core(TM) i7-6700HQ CPU @ 2.60GHz, 2592 Mhz, 4 Core(s), 8 Logical Processor(s)
Installed Physical Memory (RAM) 16.0 GB
NVIDIA GeForce GTX 960M
Intel(R) HD Graphics 530

Blender Version
Broken: (blender-2.80.0-git.1112f49-windows64)
Worked: (2.79b)

Description
While moving a video/audio strip in VSE, if the Control key is pressed, blender crashes.
I was using a build from a couple of days, so I downloaded today's build (blender-2.80-1112f49-win64.zip) to double check, and I get the same crash.
Tested the same against 2.79b, no problem there.
Furthermore, I tested the same on a virtual machine running Ubuntu 18.04, downloading today's build as well (blender-2.80-1112f49a14b-linux-glibc219-x86_64.tar.bz2), I was also able to reproduce the crash there.

Exact steps for others to reproduce the error

  1. Add Video Editing workspace
  2. In Video Sequencer -> Add -> Movie
  3. Right click select any or all strips and press G to move
  4. Press Control Key -> :'(

I have never reported a bug, so I hope the information provided is sufficient.

PS: Love Blender, thanks for building such a great software :)

**System Information** OS Name Microsoft Windows 10 Home Single Language Version 10.0.16299 Build 16299 System Manufacturer ASUSTeK COMPUTER INC. System Model GL752VW System Type x64-based PC System SKU ASUS-NotebookSKU Processor Intel(R) Core(TM) i7-6700HQ CPU @ 2.60GHz, 2592 Mhz, 4 Core(s), 8 Logical Processor(s) Installed Physical Memory (RAM) 16.0 GB NVIDIA GeForce GTX 960M Intel(R) HD Graphics 530 **Blender Version** Broken: (blender-2.80.0-git.1112f49-windows64) Worked: (2.79b) **Description** While moving a video/audio strip in VSE, if the Control key is pressed, blender crashes. I was using a build from a couple of days, so I downloaded today's build (blender-2.80-1112f49-win64.zip) to double check, and I get the same crash. Tested the same against 2.79b, no problem there. Furthermore, I tested the same on a virtual machine running Ubuntu 18.04, downloading today's build as well (blender-2.80-1112f49a14b-linux-glibc219-x86_64.tar.bz2), I was also able to reproduce the crash there. **Exact steps for others to reproduce the error** 1. Add **Video Editing** workspace 2. In Video Sequencer -> Add -> Movie 3. Right click select any or all strips and press G to move 4. Press Control Key -> :'( I have never reported a bug, so I hope the information provided is sufficient. PS: Love Blender, thanks for building such a great software :)

Added subscriber: @PaoloCabaleiro

Added subscriber: @PaoloCabaleiro

Added subscriber: @radius688

Added subscriber: @radius688

Hello! This happened to me as well. I am running an iMac, late 2012, 2.9Ghz Intel i5, 32 GB 1600MHZ DDR3 RAM, Nvidia GeForce GTX 660M 512 MB graphics card.

Hello! This happened to me as well. I am running an iMac, late 2012, 2.9Ghz Intel i5, 32 GB 1600MHZ DDR3 RAM, Nvidia GeForce GTX 660M 512 MB graphics card.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-07-25 14:23:03 +02:00

Looking into it…

Looking into it…

This issue was referenced by 5f1ead6395

This issue was referenced by 5f1ead63953527abd9ddca16986990d59f123aff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55895
No description provided.