Fix T55895: VSE crash while moving a strip

Glitch from multi-edit project. ;)